Bug 392777 - c++ import does not recognize const methods
Summary: c++ import does not recognize const methods
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: importer (other bugs)
Version First Reported In: 2.24.3 (KDE Applications 17.12.3)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-05 20:31 UTC by Ralf Habacker
Modified: 2018-04-10 19:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.24.90 (KDE Applications 18.03.90)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2018-04-05 20:31:26 UTC
How to reproduce:
1. start umbrello
2. Import the following code
class ConstMethodClass {
    bool ConstMethod(QString &param) const;
};
3. Open properties for imported method 'ConstMethod' 

What happens ?
The checkbox indicating that the method is const is not checked

What is required ?
The 'const' keyword should be imported
Comment 1 Ralf Habacker 2018-04-05 20:34:47 UTC
Git commit b2643163dc56c4b4dd735a90c01ad1c399ca47fa by Ralf Habacker.
Committed on 05/04/2018 at 20:34.
Pushed by habacker into branch 'Applications/18.04'.

Fix 'c++ import does not recognize const methods'

Also added a related import test case.
FIXED-IN:2.25.0 (KDE Applications 18.04.0)

A  +3    -0    test/import/cxx/const-methods.h     [License: UNKNOWN]  *
M  +4    -0    umbrello/codeimport/kdevcppparser/cpptree2uml.cpp

The files marked with a * at the end have a non valid license. Please read: https://community.kde.org/Policies/Licensing_Policy and use the headers which are listed at that page.


https://commits.kde.org/umbrello/b2643163dc56c4b4dd735a90c01ad1c399ca47fa