Fix 'c++ import does not recognize const methods'

Also added a related import test case.

BUG:392777
FIXED-IN:2.25.0 (KDE Applications 18.04.0)