umbrello/codeimport/kdevcppparser/cpptree2uml.cpp
@@ -347,6 +347,8 @@ void CppTree2Uml::parseFunctionDefinition(FunctionDefinitionAST* ast)
 
     if (d->override())
         m->setOverride(true);
+    if (d->constant())
+        m->setConst(true);
     // if a class has no return type, it could be a constructor or
     // a destructor
     if (d && returnType.isEmpty()) {
@@ -636,6 +638,8 @@ void CppTree2Uml::parseFunctionDeclaration(GroupAST* funSpec, GroupAST* storageS
     UMLOperation *m = Import_Utils::makeOperation(c, id);
     if (d->override())
         m->setOverride(true);
+    if (d->constant())
+        m->setConst(true);
     if (isConstExpression)
         m->setStereotype(QLatin1String("constexpr"));
     // if a class has no return type, it could de a constructor or
